--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,6 @@
 ﻿<!--_meta 作为公共模版分离出去-->
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="utf-8"/>
     <meta name="renderer" content="webkit|ie-comp|ie-stand"/>
@@ -9,227 +8,144 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <!--[if lt IE 9]>
-    <script type="text/javascript" src="lib/html5.js"></script>
-    <script type="text/javascript" src="lib/respond.min.js"></script>
-    <![endif]-->
-    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.css}">
-    <link rel="stylesheet" th:href="@{/dist/css/AdminLTE.min.css}">
-    <link rel="icon" th:href="@{/lib/bitbug_favicon.ico}" type="img/x-ico"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/h-ui/css/H-ui.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/H-ui.admin.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/skin/default/skin.css}" id="skin"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/style.css}"/>
-    <!--[if IE 6]>
-    <script>DD_belatedPNG.fix('*');</script>
-    <![endif]-->
-    <!--/meta 作为公共模版分离出去-->
-    <title>志蓮淨苑香積廚管理信息系統</title>
-    <style type="text/css">
-        #footer {
-            padding-left: 10px;
-            height: 40px;
-            line-height: 50px;
-            position: fixed;
-            bottom: 0;
+    <!--本页面表格使用vue element-ui样式-->
+    <link rel="stylesheet" type="text/css" th:href="@{/vue/element-ui/index.css}">
+    <style>
+        html,body,#app,.el-container{
+            /*设置内部填充为0，几个布局元素之间没有间距*/
+            padding: 0px;
+            /*外部间距也是如此设置*/
+            margin: 0px;
+            /*统一设置高度为100%*/
+            height: 100%;
+        }
+        .el-header{
+            background-color: #B3C0D1;
+            color: #333;
             text-align: center;
-            font-family: Arial;
-            font-size: 14px;
-            letter-spacing: 1px;
+            line-height: 60px;
         }
-        dl{
-        	display: none;
+
+        .el-aside {
+            background-color: #D3DCE6;
+            color: #333;
+            text-align: center;
+            /*line-height: 200px;*/
         }
-        .fonts{
-        	font-size: 20px;
+
+        .el-main {
+            background-color: #E9EEF3;
+            color: #333;
+            text-align: center;
+            /*line-height: 160px;*/
         }
     </style>
+    <![endif]-->
+    <!--/meta 作为公共模版分离出去-->
+    <title>学生平时表现评分管理系統</title>
 </head>
 <body>
-<!--_header 作为公共模版分离出去-->
-<header class="navbar-wrapper">
-    <div class="navbar navbar-fixed-top">
-        <div class="container-fluid cl">
-            <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index" style="font-size: 22px">志蓮淨苑香積廚管理信息系統</a>
-            <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="index" style="font-size: 22px">志蓮淨苑香積廚管理信息系統</a>
-            <span class="logo navbar-slogan f-l mr-10 hidden-xs" style="font-size: 22px">V2.01</span>
-            <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs"
-                href="javascript:;">&#xe667;
-            </a>
-            <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
-                <input id="clerkNumber" hidden="hidden"/>
-                <ul class="cl">
-                    <li><span id="jobTitle"></span></li>
-                    <li class="dropDown dropDown_hover">
-                        <a href="#" class="dropDown_A"><span id="adminName"></span>
-                            <i class="Hui-iconfont">&#xe6d5;</i>
-                        </a>
-                        <ul class="dropDown-menu menu radius box-shadow">
-                            <li><a href="#">個人資訊</a></li>
-                            <li><a onClick="editPassword()">更改密碼</a></li>
-                            <li><a onclick="adminOff()">切換帳戶</a></li>
-                            <li><a onclick="adminOff()">退出</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-</header>
-<!--/_header 作为公共模版分离出去-->
-
-<!--_menu 作为公共模版分离出去-->
-<aside class="Hui-aside">
-<div class="bgleft">
-    <div class="menu_dropdown bk_2 fonts">
-        <dl id="kitchen-purchase">
-            <dt>
-                <i class="Hui-iconfont">&#xe670;</i>&nbsp;採購管理
-                <i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
-            </dt>
-            <dd>
-                <ul>
-                    <li><a data-href="purchaseResponse-list" data-title="採購需求"
-                           href="javascript:void(0)" style="font-size: 18px;">1.採購需求</a></li>
-                    <li><a data-href="purchasePlan-list" data-title="採購計劃"
-                           href="javascript:void(0)" style="font-size: 18px;">2.採購計劃</a></li>
-                    <li><a data-href="purchaseSupplier-list" data-title="採購定價"
-                           href="javascript:void(0)" style="font-size: 18px;">3.採購定價</a></li>
-                    <li><a data-href="purchaseProposal-list" data-title="採購方案"
-                           href="javascript:void(0)" style="font-size: 18px;">4.採購方案</a></li>
-                    <li><a data-href="purchaseOrder-list" data-title="採購訂單"
-                           href="javascript:void(0)" style="font-size: 18px;">5.採購訂單</a></li>
-                </ul>
-            </dd>
-        </dl>
-
-        <dl id="kitchen-execute">
-            <dt>
-                <i class="Hui-iconfont">&#xe636;</i>&nbsp;執行餐單
-                <i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
-            </dt>
-            <dd>
-                <ul>
-                    <li>
-                        <a data-href="executePeople-list" data-title="執行餐單人數"
-                           href="javascript:void(0)" style="font-size: 18px;">執行餐單人數
-                        </a>
-                    </li>
-                    <li>
-                        <a data-href="execute-list" data-title="每周執行餐單"
-                           href="javascript:void(0)" style="font-size: 18px;">每周執行餐單
-                        </a>
-                    </li>
-                </ul>
-            </dd>
-        </dl>
-    </div>
-    <span id="footer">
-        <i>技術支持:<a target="_blank" href="http://www.mieasy.hk"
-                   style="color: #438eb9">米易科技</a>&nbsp;&nbsp;V2.01
-        </i>
-    </span>
+<div id="app">
+    <el-container>
+        <el-header>
+            <span href="index" style="font-size: 22px">志蓮淨苑香積廚管理信息系統</span>
+            <span style="position: absolute;right: 50px;">
+                <el-dropdown style="font-size: 15px;">
+                  <span class="el-dropdown-link">
+                    下拉菜单<i class="el-icon-arrow-down el-icon--right"></i>
+                  </span>
+                  <el-dropdown-menu slot="dropdown">
+                    <el-dropdown-item>黄金糕</el-dropdown-item>
+                    <el-dropdown-item>狮子头</el-dropdown-item>
+                    <el-dropdown-item>螺蛳粉</el-dropdown-item>
+                    <el-dropdown-item disabled>双皮奶</el-dropdown-item>
+                    <el-dropdown-item divided>蚵仔煎</el-dropdown-item>
+                  </el-dropdown-menu>
+                </el-dropdown>
+            </span>
+        </el-header>
+        <el-container>
+            <el-aside width="200px">
+                <el-menu class="el-menu-vertical-demo"  @select="handleSelect">
+                    <el-submenu index="user">
+                        <template slot="title">
+                            <i class="el-icon-location"></i>
+                            <span slot="title">导航一</span>
+                        </template>
+                        <el-menu-item index="/user/login">
+                            <span slot="title">用户管理</span>
+                        </el-menu-item>
+                        <el-menu-item index="3">
+                            <span slot="title">账号管理</span>
+                        </el-menu-item>
+                        <el-menu-item index="4">
+                            <span slot="title">账号管理</span>
+                        </el-menu-item>
+                    </el-submenu>
+                </el-menu>
+            </el-aside>
+            <el-main>Main</el-main>
+        </el-container>
+    </el-container>
 </div>
-
-</aside>
-
-<!--/_menu 作为公共模版分离出去-->
-<div class="dislpayArrow hidden-xs">
-    <a class="pngfix" href="javascript:void(0);" onClick="displaynavbar(this)"></a>
-</div>
-
-<section class="Hui-article-box">
-    <div id="Hui-tabNav" class="Hui-tabNav hidden-xs">
-        <div class="Hui-tabNav-wp">
-            <ul id="min_title_list" class="acrossTab cl">
-                <li class="active">
-                    <span title="我的桌面" th:data-href="welcome.html">我的桌面</span> <em></em></li>
-            </ul>
-        </div>
-        <div class="Hui-tabNav-more btn-group">
-            <a id="js-tabNav-prev" class="btn radius btn-default size-S"
-               href="javascript:;"><i class="Hui-iconfont">&#xe6d4;</i></a><a
-                id="js-tabNav-next" class="btn radius btn-default size-S"
-                href="javascript:;"><i class="Hui-iconfont">&#xe6d7;</i></a>
-        </div>
-    </div>
-    <div id="iframe_box" class="Hui-article">
-        <div class="show_iframe">
-            <div style="display: none" class="loading"></div>
-            <iframe scrolling="yes" frameborder="0" th:src="@{/web/welcome}"></iframe>
-        </div>
-    </div>
-</section>
-
-<div class="contextMenu" id="Huiadminmenu" style="display: none;">
-    <ul>
-        <li id="closethis">關閉當前</li>
-        <li id="closeall">關閉全部</li>
-    </ul>
-</div>
-
-
-<!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" th:src="@{/lib/jquery/1.9.1/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/lib/layer/2.4/layer.js}"></script>
-<script type="text/javascript" th:src="@{/h-ui/js/H-ui.js}"></script>
-<script type="text/javascript" th:src="@{/h-ui.admin/js/H-ui.admin.page.js}"></script>
-<script type="text/javascript" th:src="@{/lib/jquery.contextmenu/jquery.contextmenu.r2.js}"></script>
-<!--/_footer /作为公共模版分离出去-->
-
+<script type="text/javascript" th:src="@{/vue/moment/moment.min.js}"></script>
+<!--本页面表格使用vue.js-->
+<script type="text/javascript" th:src="@{/vue/vue.min.js}"></script>
+<script type="text/javascript" th:src="@{/vue/qs/qs.js}"></script>
+<script type="text/javascript" th:src="@{/vue/element-ui/index.js}"></script>
+<script type="text/javascript"  th:src="@{/vue/axios/axios.min.js}"></script>
 <!--请在下方写此页面业务相关的脚本-->
-<script>
-    $(document).ready(function () {
-        var userID = $.cookie("accountName");
-        if (userID != null) {
-            var obj = {
-                "account": userID
+<script type="text/javascript">
+    new Vue({
+        el: '#app',
+        data() {
+            return {
+                activeIndex:'2'
             }
-            $.postAjax("../web/AdminById", obj, function (date) {
-                if (date.code == "1") {
-                    $("#clerkNumber").val(date.account.clerkNumber);
-                    $("#adminName").html(date.account.clerkName);
-                    $("#jobTitle").html(date.account.jobTitle);
-                    for (var int = 0; int < date.RetChilinPermissions.length; int++) {
-                        if (date.RetChilinPermissions[int].cpKey == "ADMIN") {
-                            if(document.getElementById(date.RetChilinPermissions[int].cpName)){
-                                document.getElementById(date.RetChilinPermissions[int].cpName).style.display = "block";
+        },
+        mounted(){
+        },
+        methods:{
+            handleSubmit(formName){
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        let param = {
+                            loginType:this.loginType,
+                            accountName:this.loginForm.account,
+                            accountPassword:this.loginForm.pwd
+                        };
+                        axios({
+                            method:'post',
+                            url:'../user/userLogin',
+                            data: JSON.stringify(param)
+                        }).then(res => {
+                            if(res.data.code == "1"){
+                                this.$message({
+                                    showClose: true,
+                                    message: '添加採購計劃成功',
+                                    type: 'success'
+                                });
+                                this.getData()
+                            }else{
+                                this.$message({
+                                    showClose: true,
+                                    message: '添加採購計劃失敗',
+                                    type: 'error'
+                                });
                             }
-                        }
+                        })
+                    } else {
+                        return false;
                     }
-                }
-            });
-        } else {
-            location.href = "login";
+                })
+            },
+            handleSelect(key, keyPath) {
+                console.log(window.location.href)
+                return;
+                window.location.href = keyPath;
+            }
         }
     });
-
-    //修改密碼
-    function editPassword() {
-        layer_show('修改密碼', '../web/password-edit', 750, 420);
-    }
-
-    window.addEventListener('popstate', function () {
-        window.location.reload();
-    });
-
-    function delCookie(key) {
-        var date = new Date();
-        date.setTime(date.getTime() - 1);
-        var delValue = getCookie(key);
-        if (!!delValue) {
-            document.cookie = key + '=' + delValue + ';expires=' + date.toGMTString();
-        }
-    }
-
-    //退出
-    function adminOff() {
-        //清除cookie 跳越網頁面
-        delCookie("accountName");
-        delCookie("password");
-        location.href = "login";
-    }
 </script>
 </body>
 </html>
