--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,51 +85,45 @@
         <div class="menu_dropdown bk_2 fonts">
             <dl id="add-user">
                 <dt>
-                    <i class="Hui-iconfont">&#xe670;</i>&nbsp;採購管理
+                    <i class="Hui-iconfont">&#xe670;</i>&nbsp;用户管理
                     <i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
                 </dt>
                 <dd>
                     <ul>
-                        <li><a data-href="purchaseResponse-list" data-title="採購需求"
-                               href="javascript:void(0)" style="font-size: 18px;">1.採購需求</a></li>
-                        <li><a data-href="purchasePlan-list" data-title="採購計劃"
-                               href="javascript:void(0)" style="font-size: 18px;">2.採購計劃</a></li>
-                        <li><a data-href="purchaseSupplier-list" data-title="採購定價"
-                               href="javascript:void(0)" style="font-size: 18px;">3.採購定價</a></li>
-                        <li><a data-href="purchaseProposal-list" data-title="採購方案"
-                               href="javascript:void(0)" style="font-size: 18px;">4.採購方案</a></li>
-                        <li><a data-href="purchaseOrder-list" data-title="採購訂單"
-                               href="javascript:void(0)" style="font-size: 18px;">5.採購訂單</a></li>
-                        <li><a data-href="purchaseCash-list" data-title="自購訂單"
-                               href="javascript:void(0)" style="font-size: 18px;">6.自購訂單</a></li>
+                        <li><a data-href="user-list" data-title="用户列表"
+                               href="javascript:void(0)" style="font-size: 18px;">用户列表</a></li>
+                        <!--<li><a data-href="purchasePlan-list" data-title="採購計劃"-->
+                               <!--href="javascript:void(0)" style="font-size: 18px;">2.採購計劃</a></li>-->
+                        <!--<li><a data-href="purchaseSupplier-list" data-title="採購定價"-->
+                               <!--href="javascript:void(0)" style="font-size: 18px;">3.採購定價</a></li>-->
                     </ul>
                 </dd>
             </dl>
             <dl id="student-score">
                 <dt>
-                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;執行餐單<i
+                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;成绩管理<i
                         class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
                 </dt>
                 <dd>
                     <ul>
-                        <li><a data-href="executePeople-list" data-title="執行餐單人數"
-                               href="javascript:void(0)" style="font-size: 18px;">執行餐單人數</a></li>
-                        <li><a data-href="execute-list" data-title="每周執行餐單"
-                               href="javascript:void(0)" style="font-size: 18px;">每周執行餐單</a></li>
+                        <li><a data-href="executePeople-list" data-title="我的评分"
+                               href="javascript:void(0)" style="font-size: 18px;">我的评分</a></li>
+                        <!--<li><a data-href="execute-list" data-title="每周執行餐單"-->
+                               <!--href="javascript:void(0)" style="font-size: 18px;">每周執行餐單</a></li>-->
                     </ul>
                 </dd>
             </dl>
             <dl id="make-score">
                 <dt>
-                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;循環餐單<i
+                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;评分管理<i
                         class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
                 </dt>
                 <dd>
                     <ul>
-                        <li><a data-href="menu-list" data-title="循環餐單"
-                               href="javascript:void(0)" style="font-size: 18px;">循環餐單</a></li>
-                        <li><a data-href="menuType-list" data-title="循環餐單名稱"
-                               href="javascript:void(0)" style="font-size: 18px;">循環餐單名稱</a></li>
+                        <li><a data-href="menu-list" data-title="添加评分"
+                               href="javascript:void(0)" style="font-size: 18px;">添加评分</a></li>
+                        <!--<li><a data-href="menuType-list" data-title="循環餐單名稱"-->
+                               <!--href="javascript:void(0)" style="font-size: 18px;">循環餐單名稱</a></li>-->
                     </ul>
                 </dd>
             </dl>
