--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,10 +92,6 @@
                     <ul>
                         <li><a data-href="user-list" data-title="用户列表"
                                href="javascript:void(0)" style="font-size: 18px;">用户列表</a></li>
-                        <!--<li><a data-href="purchasePlan-list" data-title="採購計劃"-->
-                               <!--href="javascript:void(0)" style="font-size: 18px;">2.採購計劃</a></li>-->
-                        <!--<li><a data-href="purchaseSupplier-list" data-title="採購定價"-->
-                               <!--href="javascript:void(0)" style="font-size: 18px;">3.採購定價</a></li>-->
                     </ul>
                 </dd>
             </dl>
@@ -108,8 +104,6 @@
                     <ul>
                         <li><a data-href="executePeople-list" data-title="我的评分"
                                href="javascript:void(0)" style="font-size: 18px;">我的评分</a></li>
-                        <!--<li><a data-href="execute-list" data-title="每周執行餐單"-->
-                               <!--href="javascript:void(0)" style="font-size: 18px;">每周執行餐單</a></li>-->
                     </ul>
                 </dd>
             </dl>
@@ -120,10 +114,8 @@
                 </dt>
                 <dd>
                     <ul>
-                        <li><a data-href="menu-list" data-title="添加评分"
+                        <li><a data-href="score-add" data-title="添加评分"
                                href="javascript:void(0)" style="font-size: 18px;">添加评分</a></li>
-                        <!--<li><a data-href="menuType-list" data-title="循環餐單名稱"-->
-                               <!--href="javascript:void(0)" style="font-size: 18px;">循環餐單名稱</a></li>-->
                     </ul>
                 </dd>
             </dl>
