还剩添加评分和查看评分两个模块

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,6 +93,16 @@
                         <li><a data-href="user-list" data-title="用户列表"
                                href="javascript:void(0)" style="font-size: 18px;">用户列表</a></li>
                     </ul>
+                    <ul>
+                        <li><a data-href="relation-list" data-title="属系列表"
+                               href="javascript:void(0)" style="font-size: 18px;">属系列表</a></li>
+                    </ul>
+                </dd>
+                <dd>
+                    <ul>
+                        <li><a data-href="user-list" data-title="用户列表"
+                               href="javascript:void(0)" style="font-size: 18px;">用户列表</a></li>
+                    </ul>
                 </dd>
             </dl>
             <dl id="student-score">
