--- a/src/main/resources/templates/score-add.html
+++ b/src/main/resources/templates/score-add.html
@@ -38,7 +38,7 @@
 <body>
 <nav class="breadcrumb">
     <i class="Hui-iconfont">&#xe67f;</i> 首頁
-    <span class="c-gray en">&gt;</span>评分管理 <span class="c-gray en">&gt;</span>
+    <span class="c-gray en">&gt;</span>评分管理
     <span class="c-gray en">&gt;</span> 添加评分
 </nav>
 <div class="page-container" id="app">
