添加评分列表页面

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,18 +105,6 @@
                     </ul>
                 </dd>
             </dl>
-            <dl id="student-score">
-                <dt>
-                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;成绩管理<i
-                        class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
-                </dt>
-                <dd>
-                    <ul>
-                        <li><a data-href="executePeople-list" data-title="我的评分"
-                               href="javascript:void(0)" style="font-size: 18px;">我的评分</a></li>
-                    </ul>
-                </dd>
-            </dl>
             <dl id="make-score">
                 <dt>
                     <i class="Hui-iconfont">&#xe636;</i>&nbsp;评分管理<i
@@ -124,8 +112,20 @@
                 </dt>
                 <dd>
                     <ul>
-                        <li><a data-href="score-add" data-title="添加评分"
-                               href="javascript:void(0)" style="font-size: 18px;">添加评分</a></li>
+                        <li><a data-href="score-list" data-title="评分列表"
+                               href="javascript:void(0)" style="font-size: 18px;">评分列表</a></li>
+                    </ul>
+                </dd>
+            </dl>
+            <dl id="student-score">
+                <dt>
+                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;信息报表<i
+                        class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
+                </dt>
+                <dd>
+                    <ul>
+                        <li><a data-href="executePeople-list" data-title="个人评分"
+                               href="javascript:void(0)" style="font-size: 18px;">个人评分</a></li>
                     </ul>
                 </dd>
             </dl>
