--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -119,7 +119,7 @@
             </dl>
             <dl id="student-score">
                 <dt>
-                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;信息报表<i
+                    <i class="Hui-iconfont">&#xe636;</i>&nbsp;报表管理<i
                         class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i>
                 </dt>
                 <dd>
