--- a/src/main/resources/templates/score-list.html
+++ b/src/main/resources/templates/score-list.html
@@ -86,6 +86,75 @@
             </el-button>
         </el-col>
     </el-row>
+    <el-dialog title="修改评分" :visible.sync="dialogFormVisible" :close-on-click-modal="false" width="630px">
+        <el-form :model="ruleForm" status-icon :rules="rules" ref="ruleForm" label-width="150px" class="demo-ruleForm">
+            <el-form-item>
+                <el-row>
+                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
+                        <el-form-item label="纪律分" prop="disciplineScore">
+                            <el-input class="inputClass" v-model="ruleForm.disciplineScore"></el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
+                        <el-form-item label="学习分" prop="studyScore">
+                            <el-input class="inputClass" v-model="ruleForm.studyScore"></el-input>
+                        </el-form-item>
+                    </el-col>
+                </el-row>
+            </el-form-item>
+            <el-form-item>
+                <el-row>
+                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
+                        <el-form-item label="卫生分" prop="healthScore">
+                            <el-input class="inputClass" v-model="ruleForm.healthScore"></el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
+                        <el-form-item label="体育分" prop="sportsScore">
+                            <el-input class="inputClass" v-model="ruleForm.sportsScore"></el-input>
+                        </el-form-item>
+                    </el-col>
+                </el-row>
+            </el-form-item>
+            <el-form-item>
+                <el-row>
+                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
+                        <el-form-item label="文娱分" prop="entertainmentScore">
+                            <el-input class="inputClass" v-model="ruleForm.entertainmentScore"></el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
+                        <el-form-item label="平时表现分" prop="peacetimeScore">
+                            <el-input class="inputClass" v-model="ruleForm.peacetimeScore"></el-input>
+                        </el-form-item>
+                    </el-col>
+                </el-row>
+            </el-form-item>
+            <el-form-item>
+                <el-row>
+                    <el-col :xs="16" :sm="16" :md="16" :lg="16" :xl="16">
+                        <el-form-item label="备注" prop="comments">
+                            <el-input
+                                    placeholder="请输入备注"
+                                    v-model="ruleForm.comments"
+                                    maxlength="200"
+                                    show-word-limit>
+                            </el-input>
+                        </el-form-item>
+                    </el-col>
+                    <el-col :xs="3" :sm="3" :md="3" :lg="3" :xl="3">
+                        <el-button type="success" @click="addInfoToTable('ruleForm')" size="small" class="buttionClass">
+                            <i class="el-icon-plus"></i>添加
+                        </el-button>
+                    </el-col>
+                </el-row>
+            </el-form-item>
+        </el-form>
+        <div slot="footer" class="dialog-footer">
+            <el-button @click="dialogFormVisible = false">取 消</el-button>
+            <el-button type="primary" @click="submitInfo('ruleForm')">确 定</el-button>
+        </div>
+    </el-dialog>
     <el-table
             :header-cell-style="{background:'#F5F7FA',color:'#606266','text-align':'center'}"
             :data="tableData"
@@ -155,7 +224,7 @@
                     label="备注">
             </el-table-column>
             <el-table-column
-                    width="90"
+                    width="120"
                     align="center"
                     label="操作">
                 <template slot-scope="scope">
@@ -193,17 +262,64 @@
     new Vue({
         el: '#app',
         data: function() {
+            let checkNumber = (rule, value, callback) => {
+                if (value.length == 0) {
+                    callback(new Error('分数不能为空'));
+                }
+                if (/^\d+(\.\d{1})?$/.test(value)) {
+                    if (Number(value) < 0 || Number(value) > 100) {
+                        callback(new Error('请输入0-100的数'));
+                    } else {
+                        callback();
+                    }
+                } else {
+                    callback(new Error('请输入保留0-1位小数数字值'));
+                }
+            };
             return {
                 total:0,
                 weekNumber:'',
                 teacherName:'',
                 studentName:'',
+                dialogFormVisible:false,
                 pageSize:60,
                 currentPage:1,
                 tableHeight:0,
                 weekList:[],
                 tableData:[],
-                isLoading:false
+                isLoading:false,
+                ruleForm:{
+                    teacherName:'',
+                    studentName:'',
+                    weekNumber:'',
+                    disciplineScore:'',
+                    studyScore: '',
+                    healthScore: '',
+                    sportsScore: '',
+                    entertainmentScore:'',
+                    peacetimeScore:'',
+                    comments:''
+                },
+                rules: {
+                    disciplineScore:[
+                        {validator: checkNumber, trigger: 'blur' }
+                    ],
+                    studyScore:[
+                        {validator: checkNumber, trigger: 'blur' }
+                    ],
+                    healthScore:[
+                        {validator: checkNumber, trigger: 'blur' }
+                    ],
+                    sportsScore:[
+                        {validator: checkNumber, trigger: 'blur' }
+                    ],
+                    entertainmentScore:[
+                        {validator: checkNumber, trigger: 'blur' }
+                    ],
+                    peacetimeScore:[
+                        {validator: checkNumber, trigger: 'blur' }
+                    ]
+                }
             }
         },
         mounted(){
@@ -256,8 +372,24 @@
             addGradeScore(){
                 window.location.href = 'score-add';
             },
-            editGradeScore(obj){
-                window.location.href = 'voucherInventoryItems-edit?'+Qs.stringify(obj);
+            editGradeScore(gradeScore){
+                this.key = 1;
+                this.title = '修改用户';
+                this.$nextTick(()=>{
+                    this.$refs['ruleForm'].resetFields();
+                })
+                this.userId = gradeScore.userId;
+                this.dialogFormVisible = true;
+                let ruleForm = {
+                    accountNumber:gradeScore.accountNumber,
+                    userName:gradeScore.userName,
+                    accountType:gradeScore.accountType,
+                    userSex:gradeScore.userSex,
+                    userEmail:gradeScore.userEmail,
+                    cellphone:gradeScore.cellphone,
+                    newPassword:''
+                }
+                this.ruleForm = ruleForm;
             },
             removeGradeScore(gsId){
                 axios({
