--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -124,7 +124,7 @@
                 </dt>
                 <dd>
                     <ul>
-                        <li><a data-href="executePeople-list" data-title="个人评分"
+                        <li><a data-href="personal-score" data-title="个人评分"
                                href="javascript:void(0)" style="font-size: 18px;">个人评分</a></li>
                     </ul>
                 </dd>
