--- a/src/main/resources/templates/score-list.html
+++ b/src/main/resources/templates/score-list.html
@@ -35,6 +35,9 @@
             font-size: 16px;
             padding: 6px;
         }
+        .inputClass{
+            max-width: 80%;
+        }
     </style>
     <title>评分列表</title>
 </head>
@@ -52,6 +55,7 @@
     <el-row>
         <el-col :span="24" style="text-align: center;">
             <el-input
+                    v-if="accountType == 1"
                     class="input"
                     placeholder="請輸入老师姓名"
                     v-model.lazy="teacherName"
@@ -87,67 +91,36 @@
         </el-col>
     </el-row>
     <el-dialog title="修改评分" :visible.sync="dialogFormVisible" :close-on-click-modal="false" width="630px">
-        <el-form :model="ruleForm" status-icon :rules="rules" ref="ruleForm" label-width="150px" class="demo-ruleForm">
-            <el-form-item>
-                <el-row>
-                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
-                        <el-form-item label="纪律分" prop="disciplineScore">
-                            <el-input class="inputClass" v-model="ruleForm.disciplineScore"></el-input>
-                        </el-form-item>
-                    </el-col>
-                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
-                        <el-form-item label="学习分" prop="studyScore">
-                            <el-input class="inputClass" v-model="ruleForm.studyScore"></el-input>
-                        </el-form-item>
-                    </el-col>
-                </el-row>
+        <el-form :model="ruleForm" status-icon :rules="rules" ref="ruleForm"
+                 label-width="120px" class="demo-ruleForm">
+            <el-form-item label="纪律分" prop="disciplineScore">
+                <el-input class="inputClass" v-model="ruleForm.disciplineScore"></el-input>
             </el-form-item>
-            <el-form-item>
-                <el-row>
-                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
-                        <el-form-item label="卫生分" prop="healthScore">
-                            <el-input class="inputClass" v-model="ruleForm.healthScore"></el-input>
-                        </el-form-item>
-                    </el-col>
-                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
-                        <el-form-item label="体育分" prop="sportsScore">
-                            <el-input class="inputClass" v-model="ruleForm.sportsScore"></el-input>
-                        </el-form-item>
-                    </el-col>
-                </el-row>
+            <el-form-item label="学习分" prop="studyScore">
+                <el-input class="inputClass" v-model="ruleForm.studyScore"></el-input>
             </el-form-item>
-            <el-form-item>
-                <el-row>
-                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
-                        <el-form-item label="文娱分" prop="entertainmentScore">
-                            <el-input class="inputClass" v-model="ruleForm.entertainmentScore"></el-input>
-                        </el-form-item>
-                    </el-col>
-                    <el-col :xs="8" :sm="8" :md="8" :lg="6" :xl="6">
-                        <el-form-item label="平时表现分" prop="peacetimeScore">
-                            <el-input class="inputClass" v-model="ruleForm.peacetimeScore"></el-input>
-                        </el-form-item>
-                    </el-col>
-                </el-row>
+            <el-form-item label="卫生分" prop="healthScore">
+                <el-input class="inputClass" v-model="ruleForm.healthScore"></el-input>
             </el-form-item>
-            <el-form-item>
-                <el-row>
-                    <el-col :xs="16" :sm="16" :md="16" :lg="16" :xl="16">
-                        <el-form-item label="备注" prop="comments">
-                            <el-input
-                                    placeholder="请输入备注"
-                                    v-model="ruleForm.comments"
-                                    maxlength="200"
-                                    show-word-limit>
-                            </el-input>
-                        </el-form-item>
-                    </el-col>
-                    <el-col :xs="3" :sm="3" :md="3" :lg="3" :xl="3">
-                        <el-button type="success" @click="addInfoToTable('ruleForm')" size="small" class="buttionClass">
-                            <i class="el-icon-plus"></i>添加
-                        </el-button>
-                    </el-col>
-                </el-row>
+            <el-form-item label="体育分" prop="sportsScore">
+                <el-input class="inputClass" v-model="ruleForm.sportsScore"></el-input>
+            </el-form-item>
+            <el-form-item label="文娱分" prop="entertainmentScore">
+                <el-input class="inputClass" v-model="ruleForm.entertainmentScore"></el-input>
+            </el-form-item>
+            <el-form-item label="平时表现分" prop="peacetimeScore">
+                <el-input class="inputClass" v-model="ruleForm.peacetimeScore"></el-input>
+            </el-form-item>
+            <el-form-item label="备注" prop="comments">
+                <el-input
+                        class="inputClass"
+                        type="textarea"
+                        rows="3"
+                        placeholder="请输入备注"
+                        v-model="ruleForm.comments"
+                        maxlength="200"
+                        show-word-limit>
+                </el-input>
             </el-form-item>
         </el-form>
         <div slot="footer" class="dialog-footer">
@@ -281,6 +254,8 @@
                 weekNumber:'',
                 teacherName:'',
                 studentName:'',
+                teacherId:'',
+                accountType:'',
                 dialogFormVisible:false,
                 pageSize:60,
                 currentPage:1,
@@ -289,9 +264,7 @@
                 tableData:[],
                 isLoading:false,
                 ruleForm:{
-                    teacherName:'',
-                    studentName:'',
-                    weekNumber:'',
+                    gsId:'',
                     disciplineScore:'',
                     studyScore: '',
                     healthScore: '',
@@ -326,6 +299,10 @@
             this.$nextTick(() => {
                 this.tableHeight = window.innerHeight-180;
             })
+            this.accountType = this.getCookie('accountType');
+            if(this.accountType == 2){
+                this.teacherId = Number(this.getCookie('clerkId'));
+            }
             this.getGradeScoreList()
             axios({
                 method:'get',
@@ -351,8 +328,16 @@
                     return moment(date).format("YYYY-MM-DD HH:mm:ss");
                 }
             },
+            getCookie(name) {
+                var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
+                if (arr = document.cookie.match(reg))
+                    return decodeURI(arr[2]);
+                else
+                    return null;
+            },
             getData(){
                 let param = {
+                    teacherId:this.teacherId,
                     weekNumber:this.weekNumber,
                     teacherName:this.teacherName,
                     studentName:this.studentName,
@@ -373,22 +358,17 @@
                 window.location.href = 'score-add';
             },
             editGradeScore(gradeScore){
-                this.key = 1;
-                this.title = '修改用户';
-                this.$nextTick(()=>{
-                    this.$refs['ruleForm'].resetFields();
-                })
-                this.userId = gradeScore.userId;
                 this.dialogFormVisible = true;
                 let ruleForm = {
-                    accountNumber:gradeScore.accountNumber,
-                    userName:gradeScore.userName,
-                    accountType:gradeScore.accountType,
-                    userSex:gradeScore.userSex,
-                    userEmail:gradeScore.userEmail,
-                    cellphone:gradeScore.cellphone,
-                    newPassword:''
-                }
+                    disciplineScore:gradeScore.disciplineScore,
+                    studyScore:gradeScore.studyScore,
+                    healthScore:gradeScore.healthScore,
+                    sportsScore:gradeScore.sportsScore,
+                    entertainmentScore:gradeScore.entertainmentScore,
+                    peacetimeScore:gradeScore.peacetimeScore,
+                    comments:gradeScore.comments,
+                    gsId:gradeScore.gsId
+                };
                 this.ruleForm = ruleForm;
             },
             removeGradeScore(gsId){
@@ -409,6 +389,35 @@
                             message:'刪除失败',
                             type: 'error'
                         });
+                    }
+                })
+            },
+            submitInfo(formName){
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        this.dialogFormVisible = false;
+                        axios({
+                            method: 'post',
+                            url: 'score/updateGradeScore',
+                            data: this.ruleForm
+                        }).then(res => {
+                            if(res.data.code == 1){
+                                this.$message({
+                                    showClose: true,
+                                    message: '修改成功',
+                                    type: 'success'
+                                });
+                                this.getGradeScoreList();
+                            }else{
+                                this.$message({
+                                    showClose: true,
+                                    message:'修改失败',
+                                    type: 'error'
+                                });
+                            }
+                        })
+                    } else {
+                        return false;
                     }
                 })
             }
